# typst-embedded-package

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: archive.rs  lib.rs
tests/: include.rs
